--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,6 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
-
 # Site settings
 title: x64dbg blog
+tagline: 'Blog about x64dbg...'
 email: blog@x64dbg.com
 description: > # this means to ignore newlines until "baseurl:"
   Blog about x64dbg.
@@ -15,5 +9,16 @@ url: "http://x64dbg.com/blog" # the base hostname & protocol for your site
 twitter_username: x64dbg
 github_username: x64dbg
 
+paginate: 5
+
+github:
+  repo: https://github.com/x64dbg/blog
+
+author:
+  name: 'x64dbg'
+  url: http://x64dbg.com
+
 # Build settings
 markdown: kramdown
+highlighter: rogue
+gems: [jekyll-paginate, jekyll-gist, rouge]
