--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,10 @@
 # Site settings
-title: x64dbg blog
-tagline: 'Blog about x64dbg...'
+title: x64dbg
+tagline: Official x64dbg blog!
 email: blog@x64dbg.com
-description: > # this means to ignore newlines until "baseurl:"
-  Blog about x64dbg.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://x64dbg.com/blog" # the base hostname & protocol for your site
+description: Official x64dbg blog!
+baseurl: ''
+url: http://x64dbg.com/blog
 twitter_username: x64dbg
 github_username: x64dbg
 
