--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ tagline: Official x64dbg blog!
 email: blog@x64dbg.com
 description: Official x64dbg blog!
 baseurl: /blog
-#url: http://x64dbg.com
+url: http://x64dbg.com/blog
 twitter_username: x64dbg
 github_username: x64dbg
 
